--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,13 +14,13 @@
   		<nav class="main-nav">
   			<button class="main-nav__toggle" type="button">Открыть меню</button>
   			<div class="main-nav__wrapper">
-	  			<ul class="main-nav__list" site-list>
+          <ul class="main-nav__list" site-list>
 	  				<li class="site-list__item site-list__item--active">
-	  					<a>Главная</a>
+	  					<a href="#">Главная</a>
 	  				</li>
 
 	  				<li class="site-list__item">
-	  					<a href="#">Каталог продукции</a>
+	  					<a>Каталог продукции</a>
 	  				</li>
 
 	  				<li class="site-list__item">
