--- a/source/index.html
+++ b/source/index.html
@@ -1,10 +1,130 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
+<body>
+<header class="page-header">
+  <a class="page-header__logo">
+    <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Кэт энерджи">
+  </a>
+  <h1 class="page-title">Cat energy</h1>
 
-  </body>
+  <nav class="main-nav">
+    <button class="main-nav__toggle" type="button">Открыть меню</button>
+    <div class="main-nav__wrapper">
+      <ul class="main-nav__list" site-list>
+        <li class="site-list__item site-list__item--active">
+          <a>Главная</a>
+        </li>
+
+        <li class="site-list__item">
+          <a href="#">Каталог продукции</a>
+        </li>
+
+        <li class="site-list__item">
+          <a href="#">Подбор программы</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
+<main class="page-main">
+  <div class="program">
+    <header class="program__header">
+      <h2 class="program-title">Функциональное питание для котов</h2>
+      <p class="program-slogan">Занялся собой? Займись котом!</p>
+      <button class="program-button button" type="button">Подобрать программу</button>
+    </header>
+
+    <section class="program__type">
+      <div class="program__type-wrapper">
+        <h3 class="visually-hidden">Подбор программы</h3>
+        <ul class="program__typ-list site-list">
+          <li class="site-list__item">
+            <h4 class="site-list__item-title">Похудение</h4>
+            <p class="site-list__text">Ваш кот весит больше собаки и почти утратил способность
+              лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить
+              лишний вес.</p>
+            <a class="site-list__link">
+              <p class="site-list__link-text">Каталог Slim</p>
+            </a>
+          </li>
+
+          <li class="site-list__item">
+            <h4 class="site-list__item-title">Набор массы</h4>
+            <p class="site-list__text">Заработать авторитет среди дворовых котов и даже собак?
+              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="site-list__link">
+              <p class="site-list__link-text">Каталог Pro</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="principle-program">
+      <div class="principle-program--wrapper">
+        <h3 class="principle-program__slogan">Как это работает</h3>
+        <p class="principle-program__text">Функциональное питание содержит только полезные питательные вещества.</p>
+        <p class="principle-program__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+        <p class="principle-program__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+        <p class="principle-program__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+      </div>
+    </section>
+
+    <section class="slimming-example">
+      <div class="slimming-example__wrapper">
+        <h3 class="slimming-example__title">Жовой пример</h3>
+        <p class="slimming-example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+      </div>
+    </section>
+  </div>
+</main>
+
+<footer class="page-footer">
+  <div class="page-footer-wrapper">
+    <section class="page-footer__contacts contacts">
+      <h2 class="visually-hidden">Местонахождение магазина</h2>
+      <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
+      <p class="contacts__text">ул. Большая Конюшенная. д. 19/8 Санкт-Петербург</p>
+    </section>
+
+    <section class="page-footer__map map">
+      <h3 class="visually-hidden">Карта проезда</h3>
+      <img class="map-img" src="http://placehold.it/150x100" alt="Кэт энерджи">
+    </section>
+
+    <a class="page-footer__main-link">                      <!--Не ясен смысл данной ссылки, видимо для перехода к главной странице из футера...-->
+      <p class="page-footer__main">Cat energy</p>
+    </a>
+
+    <div class="page-footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="#">Мы в Фэйсбуке</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="page-footer__copyright copyright">
+      <b class="copyright__text">Разработано:</b>
+      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <a class="page-footer__copyright-logo">
+        <img class="copyright-logo-img" src="http://placehold.it/150x100" alt="Логотип Html Academy">
+      </a>
+    </div>
+
+  </div>
+</footer>
+</body>
 </html>
+
