Исправление замечаний наставника 2

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,8 +7,8 @@
   <body>
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="http://placehold.it/33x38" alt="Кэт энерджи">
-        <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Логотип">Cat energy</img>
+        <img class="page-header__logo-image" src="http://placehold.it/33x38" alt="Логотип магазина">
+        <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Надпись Кэт энерджи">
       </a>
 
       <nav class="main-nav">
@@ -45,15 +45,15 @@
               <table class="product-list__table">
                 <tr>
                   <td class="product-list__cell">Объем</td>
-                  <td class="product-list__cell-value">500 г</td>
+                  <td class="product-list__cell product-list__cell--value">500 г</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Вкус</td>
-                  <td class="product-list__cell-value">Курица</td>
+                  <td class="product-list__cell product-list__cell--value">Курица</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Цена</td>
-                  <td class="product-list__cell-value">700 Р</td>
+                  <td class="product-list__cell product-list__cell--value">700 Р</td>
                 </tr>
               </table>
               <a class="product-list__button button" href="#">Заказать</a>
@@ -67,15 +67,15 @@
               <table class="product-list__table">
                 <tr>
                   <td class="product-list__cell">Объем</td>
-                  <td class="product-list__cell-value">1000 г</td>
+                  <td class="product-list__cell product-list__cell--value">1000 г</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Вкус</td>
-                  <td class="product-list__cell-value">Курица</td>
+                  <td class="product-list__cell product-list__cell--value">Курица</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Цена</td>
-                  <td class="product-list__cell-value">1000 Р</td>
+                  <td class="product-list__cell product-list__cell--value">1000 Р</td>
                 </tr>
               </table>
               <a class="product-list__button button" href="#">Заказать</a>
@@ -89,15 +89,15 @@
               <table class="product-list__table">
                 <tr>
                   <td class="product-list__cell">Объем</td>
-                  <td class="product-list__cell-value">500 г</td>
+                  <td class="product-list__cell product-list__cell--value">500 г</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Вкус</td>
-                  <td class="product-list__cell-value">Рыба</td>
+                  <td class="product-list__cell product-list__cell--value">Рыба</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Цена</td>
-                  <td class="product-list__cell-value">700 Р</td>
+                  <td class="product-list__cell product-list__cell--value">700 Р</td>
                 </tr>
               </table>
               <a class="product-list__button button" href="#">Заказать</a>
@@ -111,15 +111,15 @@
               <table class="product-list__table">
                 <tr>
                   <td class="product-list__cell">Объем</td>
-                  <td class="product-list__cell-value">1000 г</td>
+                  <td class="product-list__cell product-list__cell--value">1000 г</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Вкус</td>
-                  <td class="product-list__cell-value">Рыба</td>
+                  <td class="product-list__cell product-list__cell--value">Рыба</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Цена</td>
-                  <td class="product-list__cell-value">1000 Р</td>
+                  <td class="product-list__cell product-list__cell--value">1000 Р</td>
                 </tr>
               </table>
               <a class="product-list__button button" href="#">Заказать</a>
@@ -133,15 +133,15 @@
               <table class="product-list__table">
                 <tr>
                   <td class="product-list__cell">Объем</td>
-                  <td class="product-list__cell-value">500 г</td>
+                  <td class="product-list__cell product-list__cell--value">500 г</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Вкус</td>
-                  <td class="product-list__cell-value">Гречка</td>
+                  <td class="product-list__cell product-list__cell--value">Гречка</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Цена</td>
-                  <td class="product-list__cell-value">400 Р</td>
+                  <td class="product-list__cell product-list__cell--value">400 Р</td>
                 </tr>
               </table>
               <a class="product-list__button button" href="#">Заказать</a>
@@ -155,15 +155,15 @@
               <table class="product-list__table">
                 <tr>
                   <td class="product-list__cell">Объем</td>
-                  <td class="product-list__cell-value">1000 г</td>
+                  <td class="product-list__cell product-list__cell--value">1000 г</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Вкус</td>
-                  <td class="product-list__cell-value">Гречка</td>
+                  <td class="product-list__cell product-list__cell--value">Гречка</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Цена</td>
-                  <td class="product-list__cell-value">700 Р</td>
+                  <td class="product-list__cell product-list__cell--value">700 Р</td>
                 </tr>
               </table>
               <a class="product-list__button button" href="#">Заказать</a>
@@ -177,15 +177,15 @@
               <table class="product-list__table">
                 <tr>
                   <td class="product-list__cell">Объем</td>
-                  <td class="product-list__cell-value">500 г</td>
+                  <td class="product-list__cell product-list__cell--value">500 г</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Вкус</td>
-                  <td class="product-list__cell-value">Рис</td>
+                  <td class="product-list__cell product-list__cell--value">Рис</td>
                 </tr>
                 <tr>
                   <td class="product-list__cell">Цена</td>
-                  <td class="product-list__cell-value">500 Р</td>
+                  <td class="product-list__cell product-list__cell--value">500 Р</td>
                 </tr>
               </table>
               <a class="product-list__button button" href="#">Заказать</a>
@@ -195,54 +195,54 @@
           <div class="catalog__other">
             <p class="catalog__other-subtitle">Показать еще 100500 товаров</p>
             <p class="catalog__other-text">На самом деле вкусов гораздо больше!</p>
-            <a class="catalog__other-button button__all" href="#">Показать все</a>
+            <a class="catalog__other-button--all button" href="#">Показать все</a>
           </div>
         </div>
       </section>
 
       <section class="addition">
         <div class="addition__wrapper">
-          <h3 class="addition__subtitle">Дополнительные товары</h3>
+          <h2 class="addition__subtitle">Дополнительные товары</h2>
           <ul class="addition__list extra-list">
             <li class="extra-list__item">
-              <h4 class="extra-list__item-title">Сахарозаменитель</h4>
+              <h3 class="extra-list__item-title">Сахарозаменитель</h3>
               <table class="extra-list__table">
                 <tr>
                   <td class="extra-list__value">1 упаковка (100 г)</td>
-                  <td class="extra-list__field">200 Р.</td>
+                  <td class="extra-list__value extra-list__value--field">200 Р.</td>
                 </tr>
               </table>
               <a class="extra-list__button button" href="#">Заказать</a>
             </li>
 
             <li class="extra-list__item">
-              <h4 class="extra-list__item-title">Питьевая вода</h4>
+              <h3 class="extra-list__item-title">Питьевая вода</h3>
               <table class="extra-list__table">
                 <tr>
                   <td class="extra-list__value">5 литров</td>
-                  <td class="extra-list__field">50 Р.</td>
+                  <td class="extra-list__value extra-list__value--field">50 Р.</td>
                 </tr>
               </table>
               <a class="extra-list__button button" href="#">Заказать</a>
             </li>
 
             <li class="extra-list__item">
-              <h4 class="extra-list__item-title">Молоко</h4>
+              <h3 class="extra-list__item-title">Молоко</h3>
               <table class="extra-list__table">
                 <tr>
                   <td class="extra-list__value">1 литр</td>
-                  <td class="extra-list__field">100 Р.</td>
+                  <td class="extra-list__value extra-list__value--field">100 Р.</td>
                 </tr>
               </table>
               <a class="extra-list__button button" href="#">Заказать</a>
             </li>
 
             <li class="extra-list-list__item">
-              <h4 class="extra-list-list__item-title">Витамины</h4>
+              <h3 class="extra-list-list__item-title">Витамины</h3>
               <table class="extra-list__table">
                 <tr>
                   <td class="extra-list__value">1 упаковка (30 г)</td>
-                  <td class="extra-list__field">300 Р.</td>
+                  <td class="extra-list__value extra-list__value--field">300 Р.</td>
                 </tr>
               </table>
               <a class="extra-list__button button" href="#">Заказать</a>
@@ -267,17 +267,17 @@
 
         <section class="page-footer__map map">
           <h3 class="visually-hidden">Карта проезда</h3>
-          <img class="map-img" src="http://placehold.it/320x360" alt="Адрес магазина">
+          <img class="map-img" src="http://placehold.it/320x360" alt="Адрес магазина: ул. Большая Конюшенная. д. 19/8 Санкт-Петербург">
         </section>
 
-        <a class="page-footer__main-link" href="index.html">                      <!--Не ясен смысл данной ссылки, видимо для перехода к главной странице из футера...-->
-          <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Логотип">Cat energy</img>
+        <a class="page-footer__main-link" href="index.html">
+          <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Логотип">
         </a>
 
         <div class="page-footer__social social">
           <h2 class="visually-hidden">Cat energy в соцсетях</h2>
           <ul class="social__list">
-            <li class="social__item">
+            <li class="s>
               <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
             </li>
             <li class="social__item">
@@ -291,7 +291,7 @@
 
         <div class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-            <img class="copyright-logo-img" src="http://placehold.it/27x34" alt="Логотип Html Academy">
+            <img class="copyright__img" src="http://placehold.it/27x34" alt="Логотип Html Academy">
           </a>
         </div>
 
