--- a/source/form.html
+++ b/source/form.html
@@ -7,8 +7,8 @@
 <body>
 <header class="page-header">
   <a class="page-header__logo">
-    <img class="page-header__logo-image" src="http://placehold.it/33x38" alt="Кэт энерджи">
-    <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Логотип">Cat energy</img>
+    <img class="page-header__logo-image" src="http://placehold.it/33x38" alt="Логотип магазина">
+    <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Надпись Кэт энерджи">
   </a>
 
   <nav class="main-nav">
@@ -44,11 +44,11 @@
 
     <section class="page-footer__map map">
       <h3 class="visually-hidden">Карта проезда</h3>
-      <img class="map-img" src="http://placehold.it/320x360" alt="Адрес магазина">
+      <img class="map-img" src="http://placehold.it/320x360" alt="Адрес магазина: ул. Большая Конюшенная. д. 19/8 Санкт-Петербург">>
     </section>
 
     <a class="page-footer__main-link" href="index.html">
-      <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Логотип">Cat energy</img>
+      <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Логотип">
     </a>
 
     <div class="page-footer__social social">
@@ -68,7 +68,7 @@
 
     <div class="page-footer__copyright copyright">
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-        <img class="copyright-logo-img" src="http://placehold.it/27x34" alt="Логотип Html Academy">
+        <img class="copyright__img" src="http://placehold.it/27x34" alt="Логотип Html Academy">
       </a>
     </div>
 
