--- a/source/index.html
+++ b/source/index.html
@@ -8,8 +8,8 @@
 <header class="page-header">
   <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
   <a class="page-header__logo">
-    <img class="page-header__logo-image" src="http://placehold.it/33x38" alt="Кэт энерджи">
-    <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Логотип">Cat energy</img>
+    <img class="page-header__logo-image" src="http://placehold.it/33x38" alt="Логотип магазина">
+    <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Надпись Кэт энерджи">
   </a>
 
   <nav class="main-nav">
@@ -69,16 +69,16 @@
     <section class="principle-program">
       <div class="principle-program__wrapper">
         <h3 class="principle-program__slogan">Как это работает</h3>
-        <p class="principle-program__text--nutrition">Функциональное питание содержит только полезные питательные вещества.</p>
-        <p class="principle-program__text--cook">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-        <p class="principle-program__text--change">Замените один-два приема обычной еды на наше функциональное питание.</p>
-        <p class="principle-program__text--time">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        <p class="principle-program__text principle-program__text--nutrition">Функциональное питание содержит только полезные питательные вещества.</p>
+        <p class="principle-program__text principle-program__text--cook">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+        <p class="principle-program__text principle-program__text--change">Замените один-два приема обычной еды на наше функциональное питание.</p>
+        <p class="principle-program__text principle-program__text--time">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
       </div>
     </section>
 
     <section class="slimming-example">
       <div class="slimming-example__wrapper">
-        <h3 class="slimming-example__title">Жовой пример</h3>
+        <h3 class="slimming-example__title">Живой пример</h3>
         <p class="slimming-example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
       </div>
     </section>
@@ -88,18 +88,18 @@
 <footer class="page-footer">
   <div class="page-footer__wrapper">
     <section class="page-footer__contacts contacts">
-      <h3 class="visually-hidden">Местонахождение магазина</h3>
+      <h2 class="visually-hidden">Местонахождение магазина</h2>
       <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
       <p class="contacts__text">ул. Большая Конюшенная. д. 19/8 Санкт-Петербург</p>
     </section>
 
     <section class="page-footer__map map">
       <h3 class="visually-hidden">Карта проезда</h3>
-      <img class="map-img" src="http://placehold.it/320x360" alt="Адрес магазина">
+      <img class="map-img" src="http://placehold.it/320x360" alt="Адрес магазина: ул. Большая Конюшенная. д. 19/8 Санкт-Петербург">>
     </section>
 
     <a class="page-footer__main-link">
-      <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Логотип">Cat energy</img>
+      <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Логотип">
     </a>
 
     <div class="page-footer__social social">
@@ -119,7 +119,7 @@
 
     <div class="page-footer__copyright copyright">
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-        <img class="copyright-logo-img" src="http://placehold.it/27x34" alt="Логотип Html Academy">
+        <img class="copyright__img" src="http://placehold.it/27x34" alt="Логотип Html Academy">
       </a>
     </div>
 
