Устранение последних замечаний, создание пробного scss

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,8 +7,7 @@
   <body>
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="http://placehold.it/33x38" alt="Логотип магазина">
-        <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Надпись Кэт энерджи">
+        <img class="page-header__logo-image" src="http://placehold.it/130x38" alt="Логотип магазина Кэт энерджи">
       </a>
 
       <nav class="main-nav">
@@ -195,7 +194,7 @@
           <div class="catalog__other">
             <p class="catalog__other-subtitle">Показать еще 100500 товаров</p>
             <p class="catalog__other-text">На самом деле вкусов гораздо больше!</p>
-            <a class="catalog__other-button--all button" href="#">Показать все</a>
+            <a class="catalog__other-button button button--all" href="#">Показать все</a>
           </div>
         </div>
       </section>
