--- a/source/form.html
+++ b/source/form.html
@@ -7,8 +7,7 @@
 <body>
 <header class="page-header">
   <a class="page-header__logo">
-    <img class="page-header__logo-image" src="http://placehold.it/33x38" alt="Логотип магазина">
-    <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Надпись Кэт энерджи">
+    <img class="page-header__logo-image" src="http://placehold.it/130x38" alt="Логотип магазина Кэт энерджи">
   </a>
 
   <nav class="main-nav">
