--- a/source/index.html
+++ b/source/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <header class="page-header">
   <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
   <a class="page-header__logo">
-    <img class="page-header__logo-image" src="http://placehold.it/33x38" alt="Логотип магазина">
-    <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Надпись Кэт энерджи">
+    <img class="page-header__logo-image" src="http://placehold.it/130x38" alt="Логотип магазина Кэт энерджи">
   </a>
 
   <nav class="main-nav">
@@ -95,7 +95,7 @@
 
     <section class="page-footer__map map">
       <h3 class="visually-hidden">Карта проезда</h3>
-      <img class="map-img" src="http://placehold.it/320x360" alt="Адрес магазина: ул. Большая Конюшенная. д. 19/8 Санкт-Петербург">>
+      <img class="map-img" src="http://placehold.it/320x360" alt="Адрес магазина: ул. Большая Конюшенная. д. 19/8 Санкт-Петербург">
     </section>
 
     <a class="page-footer__main-link">
