--- a/source/index.html
+++ b/source/index.html
@@ -36,10 +36,10 @@
 
     <main class="page-main">
       <div class="program">
-        <header class="program__header">
-          <h2 class="program__title">Функциональное питание для котов</h2>
-          <p class="program__slogan">Занялся собой? Займись котом!</p>
-          <a class="program__button button" href="form.html">Подобрать программу</a>
+        <header class="program__header program-slogan">
+          <h2 class="program-slogan__title">Функциональное питание для котов</h2>
+          <p class="program-slogan__text">Занялся собой? Займись котом!</p>
+          <a class="program-slogan__button button " href="form.html">Подобрать программу</a>
         </header>
 
         <section class="program-type">
@@ -97,11 +97,11 @@
 
         <section class="page-footer__map map">
           <h3 class="visually-hidden">Карта проезда</h3>
-          <img class="map-img" src="http://placehold.it/320x360" alt="Адрес магазина: ул. Большая Конюшенная. д. 19/8 Санкт-Петербург">
+          <img class="map-img" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Адрес магазина: ул. Большая Конюшенная. д. 19/8 Санкт-Петербург">
         </section>
 
         <a class="page-footer__main-link">
-          <img class="page-footer__main-img" src="http://placehold.it/130x25" alt="Логотип">
+          <img class="page-footer__main-img" src="img/logo-footer.svg" width="130" height="25" alt="Логотип магазина Кэт энерджи">
         </a>
 
         <div class="page-footer__social social">
@@ -121,7 +121,7 @@
 
         <div class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-            <img class="copyright__img" src="http://placehold.it/27x34" alt="Логотип Html Academy">
+            <img class="copyright__img" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип Html Academy">
           </a>
         </div>
 
