--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <header class="page-header">
+    <header class="page-header container">
       <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
@@ -44,7 +44,7 @@
           <div class="program-type__wrapper">
             <h3 class="visually-hidden">Подбор программы</h3>
             <ul class="program-type__list compilation-list">
-              <li class="compilation-list__item">
+              <li class="compilation-list__item container">
                 <h4 class="compilation-list__item-title">Похудение</h4>
                 <p class="compilation-list__text">Ваш кот весит больше собаки и почти утратил способность
                   лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить
@@ -54,7 +54,7 @@
                 </a>
               </li>
 
-              <li class="compilation-list__item">
+              <li class="compilation-list__item container">
                 <h4 class="compilation-list__item-title">Набор массы</h4>
                 <p class="compilation-list__text">Заработать авторитет среди дворовых котов и даже собак?
                   Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
@@ -67,7 +67,7 @@
         </section>
 
         <section class="principle-program">
-          <div class="principle-program__wrapper">
+          <div class="principle-program__wrapper container">
             <h3 class="principle-program__slogan">Как это работает</h3>
             <p class="principle-program__text principle-program__text--nutrition">Функциональное питание содержит только полезные питательные вещества.</p>
             <p class="principle-program__text principle-program__text--cook">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
@@ -87,7 +87,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <section class="page-footer__contacts contacts">
+        <section class="page-footer__contacts contacts container">
           <h2 class="visually-hidden">Местонахождение магазина</h2>
           <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
           <p class="contacts__text">ул. Большая Конюшенная. д. 19/8 Санкт-Петербург</p>
@@ -99,10 +99,10 @@
         </section>
 
         <a class="page-footer__main-link">
-          <img class="page-footer__main-img" src="img/logo-footer.svg" width="130" height="25" alt="Логотип магазина Кэт энерджи">
+          <img class="page-footer__main-img container" src="img/logo-footer.svg" width="130" height="25" alt="Логотип магазина Кэт энерджи">
         </a>
 
-        <div class="page-footer__social social">
+        <div class="page-footer__social social container">
           <h2 class="visually-hidden">Cat energy в соцсетях</h2>
           <ul class="social__list">
             <li class="social__item">
@@ -117,7 +117,7 @@
           </ul>
         </div>
 
-        <div class="page-footer__copyright copyright">
+        <div class="page-footer__copyright copyright container">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
             <img class="copyright__img" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип Html Academy">
           </a>
