Работа над индексом

--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -37,10 +39,12 @@
         <header class="program__header program-slogan">
           <h2 class="program-slogan__title">Функциональное питание для котов</h2>
           <p class="program-slogan__text">Занялся собой? Займись котом!</p>
-          <a class="program-slogan__button button " href="form.html">Подобрать программу</a>
+          <a class="program-slogan__button button " href="form.html">
+            <p class="program-slogan__button-text">Подобрать программу</p>
+          </a>
         </header>
 
-        <section class="program-type">
+        <section class="program-type container">
           <div class="program-type__wrapper">
             <h3 class="visually-hidden">Подбор программы</h3>
             <ul class="program-type__list compilation-list">
@@ -99,7 +103,7 @@
         </section>
 
         <a class="page-footer__main-link">
-          <img class="page-footer__main-img container" src="img/logo-footer.svg" width="130" height="25" alt="Логотип магазина Кэт энерджи">
+          <img class="page-footer__main-img" src="img/logo-footer.svg" width="130" height="25" alt="Логотип магазина Кэт энерджи">
         </a>
 
         <div class="page-footer__social social container">
