Почти доверстан index

--- a/source/index.html
+++ b/source/index.html
@@ -73,11 +73,21 @@
         <section class="principle-program">
           <div class="principle-program__wrapper container">
             <h3 class="principle-program__slogan">Как это работает</h3>
-            <p class="principle-program__text principle-program__text--nutrition">Функциональное питание содержит только полезные питательные вещества.</p>
-            <p class="principle-program__text principle-program__text--cook">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-            <p class="principle-program__text principle-program__text--change">Замените один-два приема обычной еды на наше функциональное питание.</p>
-            <p class="principle-program__text principle-program__text--time">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            <ul class="principle-program__item">
+              <li class="principle-program__list">
+                <p class="principle-program__text principle-program__text--nutrition">Функциональное питание содержит только полезные питательные вещества.</p>
+              <li class="principle-program__list">
+                <p class=" principle-program__text principle-program__text--cook">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+              </li>
+              <li class="principle-program__list">
+                <p class="principle-program__text principle-program__text--change">Замените один-два приема обычной еды на наше функциональное питание.</p>
+              </li>
+              <li class="principle-program__list">
+                <p class="principle-program__text principle-program__text--time">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+              </li>
+            </ul>
           </div>
+
         </section>
 
         <section class="slimming-example">
