Устранение замечаний по index

--- a/source/index.html
+++ b/source/index.html
@@ -37,11 +37,11 @@
     <main class="page-main">
       <div class="program">
         <header class="program__header program-slogan">
-          <h2 class="program-slogan__title">Функциональное питание для котов</h2>
-          <p class="program-slogan__text">Занялся собой? Займись котом!</p>
-          <a class="program-slogan__button button " href="form.html">
-            <p class="program-slogan__button-text">Подобрать программу</p>
-          </a>
+          <div class="container">
+            <h2 class="program-slogan__title">Функциональное питание для котов</h2>
+            <p class="program-slogan__text">Занялся собой? Займись котом!</p>
+            <a class="program-slogan__button button " href="form.html">Подобрать программу</a>
+          </div>
         </header>
 
         <section class="program-type container">
@@ -107,36 +107,37 @@
           <p class="contacts__text">ул. Большая Конюшенная. д. 19/8 Санкт-Петербург</p>
         </section>
 
-        <section class="page-footer__map map">
+        <section class="page-footer__map map container">
           <h3 class="visually-hidden">Карта проезда</h3>
-          <img class="map-img" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Адрес магазина: ул. Большая Конюшенная. д. 19/8 Санкт-Петербург">
+          <img class="map-img container" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Адрес магазина: ул. Большая Конюшенная. д. 19/8 Санкт-Петербург">
         </section>
 
-        <a class="page-footer__main-link">
-          <img class="page-footer__main-img" src="img/logo-footer.svg" width="130" height="25" alt="Логотип магазина Кэт энерджи">
-        </a>
-
-        <div class="page-footer__social social container">
-          <h2 class="visually-hidden">Cat energy в соцсетях</h2>
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--facebook" href="#">Мы в Фэйсбуке</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="page-footer__copyright copyright container">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-            <img class="copyright__img" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип Html Academy">
+        <div class="page-footer__item container">
+          <a class="page-footer__main-link">
+            <img class="page-footer__main-img" src="img/logo-footer.svg" width="130" height="25" alt="Логотип магазина Кэт энерджи">
           </a>
-        </div>
 
+          <div class="page-footer__social social container">
+            <h2 class="visually-hidden">Cat energy в соцсетях</h2>
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--facebook" href="#">Мы в Фэйсбуке</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="page-footer__copyright copyright container">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+              <img class="copyright__img" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип Html Academy">
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
 </body>
