--- a/source/index.html
+++ b/source/index.html
@@ -5,17 +5,23 @@
   <title>HTML Academy: Кэт энерджи</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <header class="page-header container">
       <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
-      </a>
+      <div class="page-header__logo">
+        <a class="page-header__logo-link">
+          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
+        </a>
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+      </div>
 
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
+
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
@@ -73,17 +79,18 @@
         <section class="principle-program">
           <div class="principle-program__wrapper container">
             <h3 class="principle-program__slogan">Как это работает</h3>
-            <ul class="principle-program__item">
-              <li class="principle-program__list">
-                <p class="principle-program__text principle-program__text--nutrition">Функциональное питание содержит только полезные питательные вещества.</p>
-              <li class="principle-program__list">
-                <p class=" principle-program__text principle-program__text--cook">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            <ul class="principle-program__list">
+              <li class="principle-program__text principle-program__text--nutrition">
+                Функциональное питание содержит только полезные питательные вещества.
               </li>
-              <li class="principle-program__list">
-                <p class="principle-program__text principle-program__text--change">Замените один-два приема обычной еды на наше функциональное питание.</p>
+              <li class="principle-program__text principle-program__text--cook">
+                Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
               </li>
-              <li class="principle-program__list">
-                <p class="principle-program__text principle-program__text--time">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+              <li class="principle-program__text principle-program__text--change">
+                Замените один-два приема обычной еды на наше функциональное питание.
+              </li>
+              <li class="principle-program__text principle-program__text--time">
+                Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
               </li>
             </ul>
           </div>
