--- a/source/index.html
+++ b/source/index.html
@@ -15,13 +15,12 @@
         <a class="page-header__logo-link">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
         </a>
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
       </div>
 
       <nav class="main-nav">
-
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
@@ -97,7 +96,7 @@
 
         </section>
 
-        <section class="slimming-example">
+        <section class="slimming-example container">
           <div class="slimming-example__wrapper">
             <h3 class="slimming-example__title">Живой пример</h3>
             <p class="slimming-example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
@@ -114,9 +113,9 @@
           <p class="contacts__text">ул. Большая Конюшенная. д. 19/8 Санкт-Петербург</p>
         </section>
 
-        <section class="page-footer__map map container">
+        <section class="page-footer__map map">
           <h3 class="visually-hidden">Карта проезда</h3>
-          <img class="map-img container" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Адрес магазина: ул. Большая Конюшенная. д. 19/8 Санкт-Петербург">
+          <img class="map-img" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Адрес магазина: ул. Большая Конюшенная. д. 19/8 Санкт-Петербург">
         </section>
 
         <div class="page-footer__item container">
